<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.PlayFragment">

    <TextView
        android:id="@+id/tvGameName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/game_name"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvCurrentResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        android:text="@string/draw"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDrawStatistic" />

    <TextView
        android:id="@+id/tvInstructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/instructions"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvGameName" />

    <TextView
        android:id="@+id/tvAllTimeStatistics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:text="@string/all_time_statistics"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvInstructions" />

    <TextView
        android:id="@+id/tvDrawStatistic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
        app:layout_constraintEnd_toStartOf="@+id/tv_loss_statistic"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvWinStatistic"
        app:layout_constraintTop_toBottomOf="@+id/tvAllTimeStatistics"
        tools:text="@string/draw_counter" />

    <TextView
        android:id="@+id/tv_loss_statistic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvDrawStatistic"
        app:layout_constraintTop_toBottomOf="@+id/tvAllTimeStatistics"
        tools:text="@string/loss_counter" />

    <TextView
        android:id="@+id/tvWinStatistic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
        app:layout_constraintEnd_toStartOf="@+id/tvDrawStatistic"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAllTimeStatistics"
        tools:text="@string/win_counter" />

    <ImageView
        android:id="@+id/ivCurrentComputerMove"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginTop="16dp"
        android:background="@color/purple_500"
        android:contentDescription="@string/current_player_move"
        android:src="@drawable/paper"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/tvVersus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCurrentResult" />

    <ImageView
        android:id="@+id/ivCurrentPlayerMove"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginTop="16dp"
        android:background="@color/purple_500"
        android:contentDescription="@string/current_computer_move"
        android:src="@drawable/paper"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvVersus"
        app:layout_constraintTop_toBottomOf="@+id/tvCurrentResult" />

    <TextView
        android:id="@+id/tvVersus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/versus"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
        android:textStyle="bold|italic"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/ivCurrentComputerMove"
        app:layout_constraintEnd_toStartOf="@+id/ivCurrentPlayerMove"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ivCurrentComputerMove"
        app:layout_constraintTop_toTopOf="@+id/ivCurrentComputerMove" />

    <ImageButton
        android:id="@+id/ibtnRock"
        android:layout_width="112dp"
        android:layout_height="96dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:adjustViewBounds="false"
        android:contentDescription="@string/rock_image_button"
        android:cropToPadding="false"
        android:scaleType="fitCenter"
        android:src="@drawable/rock"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ibtnPaper"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/ibtnPaper"
        android:layout_width="112dp"
        android:layout_height="96dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/paper_image_button"
        android:scaleType="fitCenter"
        android:src="@drawable/paper"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ibtnScissors"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ibtnRock" />

    <ImageButton
        android:id="@+id/ibtnScissors"
        android:layout_width="112dp"
        android:layout_height="96dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/scissors_image_button"
        android:scaleType="fitCenter"
        android:src="@drawable/scissors"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ibtnPaper" />

    <TextView
        android:id="@+id/tvComputer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/computer"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/ivCurrentComputerMove"
        app:layout_constraintStart_toStartOf="@+id/ivCurrentComputerMove"
        app:layout_constraintTop_toBottomOf="@+id/ivCurrentComputerMove" />

    <TextView
        android:id="@+id/tvYou"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/you"
        app:layout_constraintEnd_toEndOf="@+id/ivCurrentPlayerMove"
        app:layout_constraintStart_toStartOf="@+id/ivCurrentPlayerMove"
        app:layout_constraintTop_toBottomOf="@+id/ivCurrentPlayerMove"
        android:visibility="invisible" />

</androidx.constraintlayout.widget.ConstraintLayout>